--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<!Doctype html>
- <html lang='en'>
- <head>
-        <meta charset="UTF"-8'>
-        <meta htt-equiv="'X-UA"-Compatible' content=IE=edge'>
-        <meta name='viewport' content="'width=device-width,
+index.html
